[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/buttom.tres" type="Theme" id=1]
[ext_resource path="res://sprites/buttons/theme/background.png" type="Texture" id=2]
[ext_resource path="res://cenas/options.gd" type="Script" id=3]
[ext_resource path="res://sprites/buttons/theme/backicon.png" type="Texture" id=6]
[ext_resource path="res://sprites/menubackoptions/MenuBackground2.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="MenuBackground" type="Sprite" parent="."]
position = Vector2( 255, 144 )
scale = Vector2( 2.6588, 2.6588 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 261, 146 )
scale = Vector2( 0.929688, 1.01563 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 147.36
margin_top = 22.0
margin_right = 262.36
margin_bottom = 72.0
theme = ExtResource( 1 )

[node name="telacheia" type="CheckBox" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 22.0
pressed = true
text = "tela cheia"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 114.0
margin_bottom = 50.0
text = "resolucao"

[node name="VScrollBar" type="VScrollBar" parent="."]
margin_left = 362.0
margin_top = 22.0
margin_right = 374.0
margin_bottom = 270.0
theme = ExtResource( 1 )
page = 20.0
rounded = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 145 )
zoom = Vector2( 0.267, 0.267 )

[node name="Voltar" type="Button" parent="."]
margin_left = 148.0
margin_top = 251.0
margin_right = 240.0
margin_bottom = 283.0
theme = ExtResource( 1 )
text = "voltar"
icon = ExtResource( 6 )
icon_align = 2

[connection signal="toggled" from="VBoxContainer/telacheia" to="." method="_on_CheckBox_toggled"]
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
